ADD Mobile pattern SVG

--- a/src/index.scss
+++ b/src/index.scss
@@ -67,3 +67,10 @@ body {
     }
   }
 }
+
+@media screen and (max-width: variables.$mobile) {
+  .advice-container {
+    width: 100%;
+    max-width: 525px;
+  }
+}
